--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "mobx-logger",
-  "version": "0.7.1",
+  "name": "reactotron-mobx3-logger",
+  "version": "0.6.0",
   "description": "Mobx Logger",
   "main": "lib/index.js",
   "scripts": {
-    "clean": "rimraf dist lib",
-    "build": "yarn build:lib && yarn build:umd",
-    "build:lib": "babel src --out-dir lib && cp src/index.d.ts lib/index.d.ts",
-    "build:umd": "webpack --mode production",
-    "prepublish": "yarn clean && yarn build"
+    "clean": "$(npm bin)/rimraf dist lib",
+    "build": "npm run build:lib && npm run build:umd",
+    "build:lib": "$(npm bin)/babel src --out-dir lib && cp src/index.d.ts lib/index.d.ts",
+    "build:umd": "webpack -p",
+    "prepublish": "npm run clean && npm run build"
   },
   "repository": {
     "type": "git",
@@ -24,18 +24,19 @@
     "mobx-logger.umd.js"
   ],
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "mobx": "^4.1.0",
-    "rimraf": "^2.6.2",
-    "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.13"
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.13.2",
+    "mobx": "^3.0.0",
+    "rimraf": "^2.5.4",
+    "webpack": "^1.13.1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "reactotron-react-js": "^3.0.2"
+  },
   "peerDependencies": {
-    "mobx": ">= 4.0.0"
+    "mobx": "^3.0.0"
   },
   "keywords": [
     "mobx",
